﻿dotNetRDF
=========

A Library for RDF manipulation and parsing in .Net using C# 3.0

Robert Vesse 2009-11
rvesse@vdesign-studios.com

Change Log
----------

This represents a summary of additions, changes and removals for the 0.5.1 release of dotNetRDF

Added
- Parsing
 - Support for registering arbitrary parsers via MimeTypesHelper
 - Added a SPARQL TSV Parser
- Storage
 - Added Dydra Support

Changed
- Bug Fixes
 - Fixed a Bug where NegotiateByFileExtension would cause a HTTP 500 error rather than failing silently
 - Fixed a Bug with NegotiateByFileExtension and nested handler paths
 - Fixed a rare corner case Bug related to round-trip serialization of literals containing backslashes
 - Fixed a bug with some COPY/MOVE commands when processed with Leviathan
 - Fixed a bug related to data loading of Blank Node heavy data into the new ADO Store
 - Fixed a bug with the BaseAdoDataset reporting incorrectly for HasGraph()
 - Fixed a bug with HtmlSchemaWriter documenting anonymous classes
 - Fixed some bugs with Stardog connectivity due to changes in their HTTP server code
 - Fixed a bug with CSV output
 - Fixed a bug with SPARQL XML Parser not always decoding XML entities
 - Fixed a performance bug with new SQL backend that occurs primarily when the database server is not local
   on the network i.e. when database server is remote
- Update
 - Made LeviathanUpdateProcessor more extensible
  - Now supports a custom query processor used in evaluating WHERE clauses
- Writing
 - Updated SPARQL CSV/TSV output to match SPARQL 1.1 specification


Removed


   



